# Physics-Simulator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  fall.py  flight.py  motion.py  pyproject.toml  requirements.txt
examples/: run_all.py
physics_simulator/: __init__.py  cli.py
